kubernetes/apps/nextcloud/nextcloud/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  hostnames:
    - cloud.${SECRET_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: "1h"
        backendRequest: "1h"
      backendRefs:
        - group: ""
          kind: Service
          name: nextcloud-nginx
          namespace: nextcloud
          port: 8080
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-collabora
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  hostnames:
    - office.${SECRET_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: nextcloud-collabora
          namespace: nextcloud
          port: 9980
          weight: 1
